modify header of banner

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <!-- banner details container -->
           <div class="space-y-7 text-center lg:text-start">
             <h1 class="text-4xl lg:text-7xl font-extrabold whitespace-nowrap">
-              It's good Time
+              It's good
               <br />
               tea time at The
               <br />
